--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -20,11 +20,23 @@
 	        {% endblock head %}
 		<script type="text/javascript">
 			$(function(){
-				$('#wrote-message-btn').click(function(){
-					console.log('aaa');
+				$('.wrote-message-btn').click(function(){
+				var _t = this;
+				    
+				 $.get($(_t).attr('href'), function(data){
+					$('body').append(data);
+					$('#write-wall-message').dialog({
+						width: 450, 
+						height: 240, 
+						modal: true, 
+				    	overlay: { 
+				        	opacity: 0.5, 
+				        	background: "black" 
+						}
+					});
+				});
 				
-				var _t = this;	
-				$('.b-wall #wrote-message').slideToggle();
+			
 			
 				
 					return false;
