--- a/net/templates/group_create.html
+++ b/net/templates/group_create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n thumbnail %}
             {% block content %}
-                <div class="h-registration">
+                <div class="b-form-container">
                         <div class="b-signup">
                             <h1>{% trans "Новая группа" %}</h1>
                             <form action="{% url groups_create %}" method="post">
