--- a/net/templates/registration/activation.html
+++ b/net/templates/registration/activation.html
@@ -22,7 +22,7 @@
       <div class="b-min-height">&nbsp;</div>
      <div class="b-content-container">
     
-    <div class="h-registration">
+    <div class="b-form-container">
         <div class="b-registration">
             
             <div class="b-registration-info">
