--- a/net/templates/registration/login.html
+++ b/net/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
             {% block content %}
-    <div class="h-registration">
+    <div class="b-form-container">
         <div class="b-registration">
             <form class="b-registration-form" action="{% url auth_login %}" method="post">
                 <h2>{% trans "Уже зарегистрированы?" %}</h2>
