--- a/net/templates/registration/registration_form.html
+++ b/net/templates/registration/registration_form.html
@@ -2,7 +2,7 @@
     {% extends "base.html" %}
 	{% load i18n %}
 	            {% block content %}
-    <div class="h-registration">
+    <div class="b-form-container">
         <div class="b-registration">
             
             <div class="b-registration-info">
