--- a/photo/templates/album_create.html
+++ b/photo/templates/album_create.html
@@ -50,7 +50,7 @@
 				                        </td>
 				                    </tr>
 				                </tbody></table>
-								<div class="h-registration">
+								<div class="b-form-container">
 								        <div class="b-signup" style="margin-top: 20px;">
 									<h1>У вас еще нет ни одного альбома</h1>
 								            <form enctype="multipart/form-data" method="post" action="{% url create_photo album.user.pk,album.pk %}">
