--- a/blog/templates/post_add.html
+++ b/blog/templates/post_add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
             {% block content %}
-                <div class="h-registration">
+                <div class="b-form-container">
                         <div class="b-signup">
                             <h1>{% trans "Добавить пост" %}</h1>
                             <form method="post" action="{% url post_add  %}">
