--- a/net/templates/edit_place.html
+++ b/net/templates/edit_place.html
@@ -2,7 +2,7 @@
 {{ formset.management_form }} 
 {% load i18n %}
     {% block content %}
-	<div class="h-registration">
+	<div class="b-form-container">
         <div class="b-signup">
             <form action="." method="post" enctype="multipart/form-data">
                 <div class="b-fields-group main-fields">
