--- a/net/templates/registration/registration_complete.html
+++ b/net/templates/registration/registration_complete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
             {% block content %}
-    <div class="h-registration">
+    <div class="b-form-container">
         <div class="b-registration" style="width: 500px; margin-left: -250px; margin-bottom: 200px">
             <h2>Спасибо!</h2>
             <p>На ваш email придет письмо со ссылкой, перейдя по которой вы сможете продолжить регистрацию. Если письмо все-таки е пришло, попробуйте ввести email еще раз или написать в нашу службу поддержки</p>
