--- a/blog/templates/post_add.html
+++ b/blog/templates/post_add.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %}
+
 {% load i18n %}
             {% block content %}
-                <div class="b-form-container">
+                <div class="b-form-container" id="write-smth">
                         <div class="b-signup">
                             <h1>{% trans "Добавить пост" %}</h1>
                             <form method="post" action="{% url post_add  %}">
                                 <div class="b-fields-group main-fields">
                                     <table>
-                                        {{ form.as_table }}
+                                        {{ form.as_p }}
                                     </table>
                 
                                     <input type="submit" value="{% trans "Cоздать" %}"/>
