--- a/media/css/base.css
+++ b/media/css/base.css
@@ -102,7 +102,8 @@ table td {
 	margin: 22px 0 0 35px;
 }
 .b-block {
-	margin: 10px 0 20px 20px;
+	margin: 10px 0 0 20px;
+	width: 100%;
 	float: left;
 	background: #fff;
 }
@@ -114,7 +115,7 @@ table td {
 }
 
 .b-wall {
-	width: 30%;
+    
     float: right;
 	margin-left: 20px;
 	float: left;
@@ -138,8 +139,8 @@ table td {
 	margin: -5px 10px 0 0;
 }
 .b-photos {
-	width: 60%;
-	float: right;
+	width: 100%;
+
 	height: 140px;
 	
 }
@@ -207,6 +208,10 @@ table td {
 
 .b-post {
 	margin: 10px 0 15px 0;
+	float: left;
+	width: 40%;
+	margin: 0 0 10px 10px;
+	
 }
 .min-width {
 	height: 0px;
@@ -229,8 +234,8 @@ table td {
 	margin-top: 10px;
 }
 .b-blog {
-    width: 60%;
-    float: right;
+    width: 100%;
+
 }
 .b-message-form {
     width: 350px;
@@ -263,8 +268,8 @@ table td {
 
 
 .b-friends {
-  	width: 60%;
-	float: right;
+  	width: 100%;
+
 	height: 160px;
 }
 .b-friend-thumbnail {
@@ -273,4 +278,15 @@ table td {
 	float: left;
 	width: 100px;
 
+}
+.b-left-column {
+    overflow: hidden;
+    width: 38%;
+    float: left;
+}
+.b-right-column {
+        overflow: hidden;
+    width: 58%;
+    margin-right: 2%;
+    float: right;
 }
