поправил верстку профиля

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -258,7 +258,7 @@ table td {
     float: right;
     margin: 3px 10px 0 0;
 }
-.wrote-message-btn {
+.wrote-smth {
     margin: 0 0 0 10px;
     float: left;
     padding-bottom: 10px;
