--- a/net/templates/wall_create.html
+++ b/net/templates/wall_create.html
@@ -2,7 +2,7 @@
 {% load i18n thumbnail %}
 
      
-                        <div class="b-message-form" id="write-wall-message">
+                        <div class="b-message-form" id="write-smth">
                             <h1>
                                 {% if request.GET.private %}
                                     {% trans "Личное сообщение" %}
