--- a/net/templates/edit_place.html
+++ b/net/templates/edit_place.html
@@ -1,16 +1,15 @@
-{% extends "base.html" %}
 {{ formset.management_form }} 
 {% load i18n %}
     {% block content %}
-	<div class="b-form-container">
-        <div class="b-signup">
+	<div class="b-message-form"  id="write-smth">
+       
             <form action="." method="post" enctype="multipart/form-data">
                 <div class="b-fields-group main-fields">
-                    {{ form.as_fs }}
+                    {{ form.as_p }}
                     <input type="submit" value="{% trans "Save" %}"/>
                 </div>
             </form>
-		</div>
+	
     </div>
-    {% endblock content %}
+{% endblock content %}
   
