--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -12,7 +12,7 @@
  </div>
  {% endfor %}
  <div class="b-do-bar">
-     <a href="{% url create_pm profile.pk %}" style="margin-right: 50px;" class="wrote-smth">{% trans "Написать" %}</a>
+     <a href="{% url create_pm profile.pk %}" style="margin-right: 50px;" class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a>
      {% if widgets.wall_count %}
          <a href="{% url wall profile.pk %}">
              {% blocktrans with widgets.wall_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
