--- a/photo/templates/photo_photos.html
+++ b/photo/templates/photo_photos.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% load i18n thumbnail %}
             {% block content %}
-                <div class="b-photos-list">
+			 {% ifequal album.user.pk|stringformat:"s" request.user.user.pk|stringformat:"s" %}
+				    <a class="b-add-photo-block" href="{% url create_photo %}?album_id={{ album.pk }}">{% trans "Добавить фото" %}</a>
+                {% endifequal %}
+                <div class="b-photo-gallery">
                     {% for photo in object_list %}
-                        <a href="{% url photo photo.album.user.pk,photo.album.pk,photo.pk %}">
+                        <a class="b-photo" href="{% url photo photo.album.user.pk,photo.album.pk,photo.pk %}">
                             <img src="{% thumbnail photo.image 200x200 detail,crop %}"/>
                         </a>
                     {% endfor %}
                 </div>
 
-                {% ifequal album.user.pk|stringformat:"s" request.user.user.pk|stringformat:"s" %}
-				    <a href="{% url create_photo %}?album_id={{ album.pk }}">{% trans "Добавить фото" %}</a>
-                {% endifequal %}
+               
       
             {% endblock content %}
