--- a/net/templates/wall_messages.html
+++ b/net/templates/wall_messages.html
@@ -1,29 +1,42 @@
 {% extends "base.html" %}
 {% load i18n thumbnail %}
             {% block content %}
-                <div class="h-registration">
-                        <div class="b-signup">
-                            <h1>{% trans "Стена" %}</h1>
-                            <ul>
-                            {% for msg in object_list %}
-                                <li>
-                                    {{ msg.sent|date:"d.m.Y" }}
-                                    {% ifequal msg.from_user user.user %}
-                                        {% trans "Для:" %} 
-                                        <a href="{{ msg.get_address.get_absolute_url }}">
-                                            {{ msg.get_address.get_name }}
-                                        </a>
-                                    {% else %}
-                                        {% trans "От:" %} 
-                                        <a href="{{ msg.from_user.get_absolute_url }}">
-                                            {{ msg.from_user.get_name }}
-                                        </a>
-                                    {% endifequal %} 
-                                    <h1>{{ msg.subject }}</h1>
-                                    {{ msg.body }}
-                                </li>
-                            {% endfor %}
-                            </ul>
-                        </div>
-                </div>
+<div class="b-left-column">
+			{% include "messages_widget.html" %}
+				{% include "friends_widget.html" %}
+</div>
+<div class="b-right-column">
+			<div class="b-block b-wall" >
+				<h1 class="header">{% trans 'Inbox' %}
+                </h1>
+        		 {% for msg in object_list %}
+                        <div class="b-message">
+
+		 <div class="b-message-header">
+	         <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">
+	         <h3>	        {% ifequal msg.from_user user.user %}
+                         {% trans "Для:" %} 
+                         <a href="{{ msg.get_address.get_absolute_url }}">
+                             {{ msg.get_address.get_name }}
+                         </a>
+                     {% else %}
+                         {% trans "От:" %} 
+                         <a href="{{ msg.from_user.get_absolute_url }}">
+                             {{ msg.from_user.get_name }}
+                         </a>
+                     {% endifequal %} 
+			<a href="{{ msg.from_user.get_absolute_url }}">{{ msg.from_user.get_name }}</a>:</h3>
+	     </div>
+		 {{ msg.sent|date:"d.m.Y" }}
+	     <p>{{ msg.body }}</p>
+	</div>
+	
+                           
+                    
+                     
+                    {% endfor %}
+			</div>
+			</div>
+			
+           
             {% endblock content %}
