--- a/net/templates/messages_widget.html
+++ b/net/templates/messages_widget.html
@@ -1,22 +1,26 @@
 {% load thumbnail i18n %}
 <div class="b-block b-wall">
-      <h1 class="header">{% trans "Cообщения" %}</h1>
+    <h1 class="header">{% trans "Cообщения" %}</h1>
 
-      {% for msg in widgets.messages %}
-      <div class="b-message">
-          <div class="b-message-header">
-              <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">
-              <h3><a href="{{ msg.from_user.get_absolute_url }}">{{ msg.from_user.get_name }}</a>:</h3>
-          </div>
-          <p>{{ msg.body }}</p>
+    {% for msg in widgets.messages %}
+    <div class="b-message">
+      <div class="b-message-header">
+          <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">
+          <h3><a href="{{ msg.from_user.get_absolute_url }}">{{ msg.from_user.get_name }}</a>:</h3>
       </div>
-      {% endfor %}
-      <div class="b-do-bar">
-          <a href="{% url create_pm profile.pk %}?private=1"  class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a>
-          {% if widgets.wall_count %}
-              <a href="{% url wall profile.pk %}">
+      <p>{{ msg.body }}</p>
+    </div>
+    {% endfor %}
+    {% if widgets.profile %}
+        <div class="b-do-bar">
+            {% ifnotequal widgets.profile user.user %}
+                <a href="{% url create_pm widgets.profile.pk %}?private=1"  class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a>
+            {% endifnotequal %}
+            {% if widgets.wall_count %}
+                <a href="{% url wall widgets.profile.pk %}">
                   {% blocktrans with widgets.messages_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
-              </a>
-          {% endif %}
-      </div>
-      </div>
+                </a>
+            {% endif %}
+        </div>
+    {% endif %}
+</div>
