--- a/photo/templates/photo_photos.html
+++ b/photo/templates/photo_photos.html
@@ -12,6 +12,6 @@
                     {% endfor %}
                 </div>
 
-               
+                {% include "paginator.html" %}
       
             {% endblock content %}
