--- a/net/templates/profile_include.html
+++ b/net/templates/profile_include.html
@@ -26,10 +26,10 @@
                                             <a href="{% url user_search %}?birthdate={{ profile.birthdate }}">{{ profile.birthdate|date:"d.m.Y" }}</a><br />
                                         {% endif %} 
                                         {% if profile.city %} 
-                                            <a href="{% url user_search %}?birthdate={{ profile.city }}">{{ profile.city }}</a> 
+                                            <a href="{% url user_search %}?city__pk={{ profile.city.pk }}">{{ profile.city.name }}</a> 
                                         {% endif %} 
                                         {% if profile.country %} 
-                                            , <a href="{% url user_search %}?birthdate={{ profile.country }}">{{ profile.country }}</a>
+                                            , <a href="{% url user_search %}?country__pk={{ profile.country.pk }}">{{ profile.country.name }}</a>
                                         {% endif %}
                                     </div>
                                     <div class="b-career-info">
