--- a/net/templates/footer.css
+++ b/net/templates/footer.css
@@ -3,6 +3,7 @@
             bottom: 0;
             border-top: solid 2px #e2e2e2;
             padding: 20px 0;
+            height: 60px;
             margin-top: 20px;
             float: left; display: inline;
             margin-top: 20px;
