--- a/media/css/footer.css
+++ b/media/css/footer.css
@@ -7,6 +7,8 @@
             float: left; display: inline;
             margin-top: 20px;
             font-size: 0.9em;
+            background: #fff;
+            
 left:0;
             
         }
