--- a/net/templates/edit_profile.html
+++ b/net/templates/edit_profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {{ formset.management_form }} 
 {% load i18n %}
+{% block profile %}
+{% endblock profile %}
     {% block content %}
 	<div class="b-form-container">
         <div class="b-signup">
