--- a/net/templates/wall_create.html
+++ b/net/templates/wall_create.html
@@ -1,4 +1,6 @@
-
+{% extends "base.html" %}
+{% load i18n thumbnail %}
+            {% block content %}
 {% load i18n thumbnail %}
 
      
@@ -22,3 +24,4 @@
                         </div>
                  
       
+            {% endblock content %}
