--- a/net/templates/ads_widget.html
+++ b/net/templates/ads_widget.html
@@ -1,6 +1,6 @@
 {% load thumbnail i18n %} 
 <div class="b-block b-wall">
-    <h1 class="header">{% trans "Обьявления" %}</h1>
+    {% if widgets.blog.ads %} <h1 class="header">{% trans "Обьявления" %}</h1>
 
     {% for ad in widgets.blog.ads %}
     <div class="b-message">
@@ -19,4 +19,10 @@
             </a>
         {% endif %}
     </div>
+
+	{% else %}
+	<h1 class="header">
+	У вас нет обьявлений, <a href="{% url post_add %}" class="wrote-smth">добавьте</a>
+	</h1>
+		{% endif %}
     </div>
