--- a/net/templates/photos_widget.html
+++ b/net/templates/photos_widget.html
@@ -1,10 +1,12 @@
 {% load thumbnail i18n %}
 	<div class="b-block b-photos">
-		<h1 class="header">{% trans "Фотографии" %}
+		{% if widgets.photos %}
+		<h1 class="header">
+			{% trans "Фотографии" %}
 			{% if widgets.photos.photos_count %} 
                 (<a  href="{% url albums profile.pk %}">{{  widgets.photos.photos_count}}</a>)  
             {% endif %}</h1>
-        {% if widgets.photos %}
+        
             <div class="b-albums">
             {% for photo in widgets.photos %}
                 <a class="b-photo" href="{% url photos profile.pk,photo.album.pk %}">
@@ -12,6 +14,7 @@
                 </a>
             {% endfor %}				
             </div>
-        {% endif %}
-		
+        {% else %}
+<h1 class="header"><a href="{% url create_photo %}">{% trans "Загрузите фотографии" %}</a></h1>
+		{% endif %}
 	</div>
