--- a/net/templates/wall_widget.html
+++ b/net/templates/wall_widget.html
@@ -1,5 +1,6 @@
 {% load thumbnail i18n %}
 <div class="b-block b-wall">
+	{% if widgets.wall %}
  <h1 class="header">{% trans "Стена" %}</h1>
 
  {% for msg in widgets.wall %}
@@ -19,5 +20,9 @@
          </a>
      {% endif %}
  </div>
+	{% else %}
+	<h1 class="header">{% trans "Стена пуста" %}</h1>
+	<p><a href="{% url search %}">Найдите друзей, и они вам что-нибудь напишут</a> или попробуйте сами <a href="{% url create_pm profile.pk %}" style="margin-right: 50px;" class="wrote-smth wrote-smth-btn">{% trans "Написать" %}</a></p>
+	{% endif %}
  </div>  
       
