--- a/blog/templates/comments/comments_include.html
+++ b/blog/templates/comments/comments_include.html
@@ -1,7 +1,8 @@
 {% load i18n comments %}
                 {% if user.is_authenticated %}
-                    <h2>{% trans "Leave a comment:" %}</h2>
+                  
                     <div class="comments-form">
+	  <h3 style="margin: 20px 0 10px 0">{% trans "Оставьте комментарий:" %}</h3>
                         {% get_comment_form for object as form %}
                         <form action="{% url comments-post-comment-next request.path %}" method="POST">
                           {{ form.content_type }} {{ form.object_pk }} {{ form.timestamp }} {{ form.security_hash }}
@@ -10,26 +11,26 @@
                           </p>
                           <p {% if form.comment.errors %} class="error"{% endif %}>
                             {% if form.comment.errors %}{{ form.comment.errors }}{% endif %}
-                            {{ form.comment.label_tag }} {{ form.comment }}
-                          </p>
-                          <p class="submit">
-                            <input type="submit" name="submit" class="submit-post" value="{% trans "Post" %}" />
+                           {{ form.comment }}
+                          </p>  <p class="submit">
+                            <input type="submit" n
+ame="submit" class="submit-post" value="{% trans "Post" %}" />
                           </p>
                         </form>
                     </div>
                 {% endif %}
-
+			
                 <div class="comments">
+		<h3 style="margin-bottom: 10px">{% trans "Уже прокомментировали:" %}</h3>
                     {% get_comment_list for object as comment_list %}
                     {% with comment_list|dictsortreversed:"submit_date" as comments %}
                         {% for comment in comments %}
                             <div class="comment">
                                 <p>
-                                    {% trans "Author:" %} 
-                                    <a href="{{ comment.user.user.get_absolute_url }} ">{{ comment.user.user.get_name }}</a>
+                                    {{ comment.submit_date|date:"d.m.Y" }} | <a href="{{ comment.user.user.get_absolute_url }} ">{{ comment.user.user.get_name }}</a>
                                 </p>
-                                <p>{% trans "Date:" %} {{ comment.submit_date|date:"d.m.Y" }}</p>
-                                <p>{% trans "Text:" %} <br/> {{ comment.comment }}</p>
+                               
+                                <p>{{ comment.comment }}</p>
                             </div>
                         {% endfor %}
                     {% endwith %}
